Package_Tools/include-C/Elf64/libelf.pp


function elf_begin(__fildes:longint; __cmd:TElf_Cmd; __ref:PElf):PElf;cdecl;external;
{ Create a clone of an existing ELF descriptor.   }
function elf_clone(__elf:PElf; __cmd:TElf_Cmd):PElf;cdecl;external;
{ Create descriptor for memory region.   }
function elf_memory(__image:Pchar; __size:Tsize_t):PElf;cdecl;external;
{ Advance archive descriptor to next element.   }
function elf_next(__elf:PElf):TElf_Cmd;cdecl;external;
{ Free resources allocated for ELF.   }
function elf_end(__elf:PElf):longint;cdecl;external;
{ Update ELF descriptor and write file to disk.   }
function elf_update(__elf:PElf; __cmd:TElf_Cmd):Tint64_t;cdecl;external;
{ Determine what kind of file is associated with ELF.   }
function elf_kind(__elf:PElf):TElf_Kind;cdecl;external;
{ Get the base offset for an object file.   }
function elf_getbase(__elf:PElf):Tint64_t;cdecl;external;
{ Retrieve file identification data.   }
function elf_getident(__elf:PElf; __nbytes:Psize_t):Pchar;cdecl;external;
{ Retrieve class-dependent object file header.   }
function elf32_getehdr(__elf:PElf):PElf32_Ehdr;cdecl;external;
{ Similar but this time the binary calls is ELFCLASS64.   }
function elf64_getehdr(__elf:PElf):PElf64_Ehdr;cdecl;external;
{ Create ELF header if none exists.   }
function elf32_newehdr(__elf:PElf):PElf32_Ehdr;cdecl;external;
{ Similar but this time the binary calls is ELFCLASS64.   }
function elf64_newehdr(__elf:PElf):PElf64_Ehdr;cdecl;external;
{ Get the number of program headers in the ELF file.  If the file uses
   more headers than can be represented in the e_phnum field of the ELF
   header the information from the sh_info field in the zeroth section
   header is used.   }
function elf_getphdrnum(__elf:PElf; __dst:Psize_t):longint;cdecl;external;
{ Retrieve class-dependent program header table.   }
function elf32_getphdr(__elf:PElf):PElf32_Phdr;cdecl;external;
{ Similar but this time the binary calls is ELFCLASS64.   }
function elf64_getphdr(__elf:PElf):PElf64_Phdr;cdecl;external;
{ Create ELF program header.   }
function elf32_newphdr(__elf:PElf; __cnt:Tsize_t):PElf32_Phdr;cdecl;external;
{ Similar but this time the binary calls is ELFCLASS64.   }
function elf64_newphdr(__elf:PElf; __cnt:Tsize_t):PElf64_Phdr;cdecl;external;
{ Get section at INDEX.   }
function elf_getscn(__elf:PElf; __index:Tsize_t):PElf_Scn;cdecl;external;
{ Get section at OFFSET.   }
function elf32_offscn(__elf:PElf; __offset:TElf32_Off):PElf_Scn;cdecl;external;
{ Similar but this time the binary calls is ELFCLASS64.   }
function elf64_offscn(__elf:PElf; __offset:TElf64_Off):PElf_Scn;cdecl;external;
{ Get index of section.   }
function elf_ndxscn(__scn:PElf_Scn):Tsize_t;cdecl;external;
{ Get section with next section index.   }
function elf_nextscn(__elf:PElf; __scn:PElf_Scn):PElf_Scn;cdecl;external;
{ Create a new section and append it at the end of the table.   }
function elf_newscn(__elf:PElf):PElf_Scn;cdecl;external;
{ Get the section index of the extended section index table for the
   given symbol table.   }
function elf_scnshndx(__scn:PElf_Scn):longint;cdecl;external;
{ Get the number of sections in the ELF file.  If the file uses more
   sections than can be represented in the e_shnum field of the ELF
   header the information from the sh_size field in the zeroth section
   header is used.   }
function elf_getshdrnum(__elf:PElf; __dst:Psize_t):longint;cdecl;external;
{ Sun messed up the implementation of 'elf_getshnum' in their implementation.
   It was agreed to make the same functionality available under a different
   name and obsolete the old name.   }
function elf_getshnum(__elf:PElf; __dst:Psize_t):longint;cdecl;external;
{ xxxxxxxxxxxxxxxx  __deprecated_attribute__; }
{ Get the section index of the section header string table in the ELF
   file.  If the index cannot be represented in the e_shstrndx field of
   the ELF header the information from the sh_link field in the zeroth
   section header is used.   }
function elf_getshdrstrndx(__elf:PElf; __dst:Psize_t):longint;cdecl;external;
{ Sun messed up the implementation of 'elf_getshstrndx' in their
   implementation.  It was agreed to make the same functionality available
   under a different name and obsolete the old name.   }
function elf_getshstrndx(__elf:PElf; __dst:Psize_t):longint;cdecl;external;
{ xxxxxxxxxxxxxxxx       __deprecated_attribute__; }
{ Retrieve section header of ELFCLASS32 binary.   }
function elf32_getshdr(__scn:PElf_Scn):PElf32_Shdr;cdecl;external;
{ Similar for ELFCLASS64.   }
function elf64_getshdr(__scn:PElf_Scn):PElf64_Shdr;cdecl;external;
{ Returns compression header for a section if section data is
   compressed.  Returns NULL and sets elf_errno if the section isn't
   compressed or an error occurred.   }
function elf32_getchdr(__scn:PElf_Scn):PElf32_Chdr;cdecl;external;
function elf64_getchdr(__scn:PElf_Scn):PElf64_Chdr;cdecl;external;
{ Compress or decompress the data of a section and adjust the section
   header.

   elf_compress works by setting or clearing the SHF_COMPRESS flag
   from the section Shdr and will encode or decode a Elf32_Chdr or
   Elf64_Chdr at the start of the section data.  elf_compress_gnu will
   encode or decode any section, but is traditionally only used for
   sections that have a name starting with ".debug" when
   uncompressed or ".zdebug" when compressed and stores just the
   uncompressed size.  The GNU compression method is deprecated and
   should only be used for legacy support.

   elf_compress takes a compression type that should be either zero to
   decompress or an ELFCOMPRESS algorithm to use for compression.
   Currently ELFCOMPRESS_ZLIB and ELFCOMPRESS_ZSTD are supported.
   elf_compress_gnu will compress in the traditional GNU compression
   format when compress is one and decompress the section data when
   compress is zero.

   The FLAGS argument can be zero or ELF_CHF_FORCE.  If FLAGS contains
   ELF_CHF_FORCE then it will always compress the section, even if
   that would not reduce the size of the data section (including the
   header).  Otherwise elf_compress and elf_compress_gnu will compress
   the section only if the total data size is reduced.

   On successful compression or decompression the function returns
   one.  If (not forced) compression is requested and the data section
   would not actually reduce in size, the section is not actually
   compressed and zero is returned.  Otherwise -1 is returned and
   elf_errno is set.

   It is an error to request compression for a section that already
   has SHF_COMPRESSED set, or (for elf_compress) to request
   decompression for an section that doesn't have SHF_COMPRESSED set.
   If a section has SHF_COMPRESSED set then calling elf_compress_gnu
   will result in an error.  The section has to be decompressed first
   using elf_compress.  Calling elf_compress on a section compressed
   with elf_compress_gnu is fine, but probably useless.

   It is always an error to call these functions on SHT_NOBITS
   sections or if the section has the SHF_ALLOC flag set.
   elf_compress_gnu will not check whether the section name starts
   with ".debug" or .zdebug".  It is the responsibility of the caller
   to make sure the deprecated GNU compression method is only called
   on correctly named sections (and to change the name of the section
   when using elf_compress_gnu).

   All previous returned Shdrs and Elf_Data buffers are invalidated by
   this call and should no longer be accessed.
